[HK2T_1006 HK2T_1007] api signin , signup for user

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,23 +2,23 @@
 #
 # Table name: users
 #
-#  id          :bigint           not null, primary key
-#  address     :string(255)      not null
-#  birth_day   :datetime         not null
-#  city        :string(255)      not null
-#  district    :string(255)      not null
-#  email       :string(255)      not null
-#  firstname   :string(255)      not null
-#  gender      :string(255)      not null
-#  id_card     :bigint           not null
-#  link_avatar :string(255)      not null
-#  phone       :string(255)      not null
-#  position    :bigint           not null
-#  salary      :bigint
-#  surname     :string(255)      not null
-#  ward        :string(255)      not null
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id              :bigint           not null, primary key
+#  address         :string(255)
+#  birth_day       :datetime
+#  city            :string(255)
+#  district        :string(255)
+#  email           :string(255)      not null
+#  firstname       :string(255)      not null
+#  gender          :bigint
+#  id_card         :bigint
+#  link_avatar     :string(255)
+#  password_digest :string(255)      not null
+#  position        :bigint           not null
+#  salary          :bigint
+#  surname         :string(255)      not null
+#  ward            :string(255)
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
 #
 
 # This model initially had no columns defined. If you add columns to the
